:memo: add focus svg attribute

--- a/almanac/IE11.md
+++ b/almanac/IE11.md
@@ -1,6 +1,10 @@
 # IE11
 
 ## Distorted image with Flexbox
-Using Flexbox for vertical-centering will distort the image. Better to use another vertical-centering technique like [the translate approach](https://css-tricks.com/centering-css-complete-guide/).
+Using Flexbox for vertical-centering will distort the image. Better to use another vertical-centering technique like [the translate
+approach](https://css-tricks.com/centering-css-complete-guide/).
+
+## SVG stealing focus when used inside a button
+Adding `focusable="false"` to the `svg` will prevent the svg from receiving focus.
 
 See [codepen example](http://codepen.io/chriscoyier/pen/lpema).
